# Algorithm-24-PowerRune

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
launch/: detector.yml
src/: Alias.hpp  Binarizer.hpp  Cache.hpp  Configuration.hpp  Data.hpp  FanBladeDetector.hpp  Function.hpp  Interfaces.hpp  Masker.hpp  Node.cpp  Node.hpp  PowerRune.hpp  PowerRuneNode.cpp  Predictor.cpp  RIconDetector.hpp  RuneTracker.hpp  Stabilizer.cpp  Stabilizer.hpp  TEST.cpp  Taylor.hpp  TestVideo.cpp  Transformer3D.hpp  main.cpp
src/Converter/: ConvertTo3D.hpp  Converter.cpp  Converter.hpp  FitPlane.hpp  PixelToDirection.hpp  Plane.hpp  Transform.hpp
src/RuneRecognizer/: Alias.hpp  Feature.cpp  Feature.hpp  Matches.cpp  Matches.hpp  RuneRecognizer.cpp  RuneRecognizer.hpp
src/check/: checkRotationDirection.cpp
src/detector/: API.cpp  API.hpp  Alias.hpp  Arm.cpp  Arm.hpp  Detector.cpp  Detector.hpp  Feature.cpp  Feature.hpp  FeatureMatch.cpp  FeatureMatch.hpp  Matches.cpp  Matches.hpp  RuneRecognizer.cpp  RuneRecognizer.hpp  Sample.cpp  Sample.hpp  api.cpp  api.hpp
src/filter/: Converter.cpp  Converter.hpp
src/prediction/: Predictor.hpp  pre_bullet.cpp  pre_bullet.h  pre_for_small.cpp  pre_for_small.h
test/: DataTest.cpp  DetectorTest.cpp  StabilizerTest.cpp
test/Converter/: ConverterTest.cpp
test/RuneRecognizer/: FeatureTest.cpp  MatchesTest.cpp  RuneRecognizerTest.cpp
